--- a/Pagelink-Sanitizer_for_Firefox/src/manifest.json
+++ b/Pagelink-Sanitizer_for_Firefox/src/manifest.json
@@ -35,7 +35,8 @@
     },
     "content_scripts": [{
             "matches": ["<all_urls>"],
-            "js": ["content_scripts/RewritePageLinks.js"]
+            "js": [ "content_scripts/report.js"],
+            "run_at": "document_start"
         }
     ],
     "permissions": [
