--- a/Pagelink-Sanitizer_for_Firefox/src/manifest.json
+++ b/Pagelink-Sanitizer_for_Firefox/src/manifest.json
@@ -41,6 +41,7 @@
     ],
     "permissions": [
         "webRequest",
+        "webRequestBlocking",
         "activeTab",
         "tabs",
         "contextMenus",
