--- a/Pagelink-Sanitizer_for_Firefox/src/manifest-content_script.json
+++ b/Pagelink-Sanitizer_for_Firefox/src/manifest-content_script.json
@@ -32,6 +32,12 @@
            "background.js"
         ]
     },
+    "content_scripts": [{
+            "matches": ["<all_urls>"],
+            "js": [ "content_scripts/report.js"],
+            "run_at": "document_start"
+        }
+    ],
     "permissions": [
         "webRequest",
         "webRequestBlocking",
